Fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h2 class="title is-5 minimal-title">Join our community</h2>
             <div class="feature-content">
               <p>
-                We are a community of students, developers and technology enthusiast who share similar interests.
+                We are a community of students, developers and technology enthusiasts who share similar interests.
                 Learn about our events, get insights into latest technologies and more.
               </p>
               <br>
@@ -206,7 +206,7 @@
   <footer class="footer is-dark">
       <div class="content has-text-centered">
         <p>
-            Copyright © Frontenders Community Nepal. Ltd 2019. All Rights Reserved
+            Copyright © Frontenders Community Nepal.2019. All Rights Reserved
         </p>
       </div>
     </footer>
