Added hackathon page

--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>
-    <%= htmlWebpackPlugin.options.title %>
+    Frontenders Community Nepal
   </title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-</head>
+<link href="css/main.css" rel="stylesheet"></head>
 
 <body>
   <nav class="navbar container is-black is-transparent" role="navigation" aria-label="main navigation">
@@ -54,7 +54,7 @@
     </div>
   </nav>
 
-  <section class="hero-home">
+  <section class="hero--home">
     <div class="container" style="width: 100%;">
       <div class="featured">
 
@@ -240,6 +240,6 @@
     </div>
   </footer>
 
-</body>
+<script type="text/javascript" src="js/script.js"></script></body>
 
 </html>
