--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
   </nav>
 
-  <section class="hero">
+  <section class="hero-home">
     <div class="container" style="width: 100%;">
       <div class="featured">
 
