Added FAQ section

--- a/hackfest2019.html
+++ b/hackfest2019.html
@@ -182,8 +182,59 @@
     </div>
     <!-- /Feature -->
 
-  </section>
+    <div class="columns is-vcentered">
+      <!-- Content -->
+      <div class="column  has-text-centered">
+        <div class="minimal-feature">
+          <h1 class="title is-4 minimal-title">FAQ</h2>
+        </div>
+      </div>
 
+    </div>
+
+    <div class="faq columns">
+
+      <div class="column is-6">
+        <div>
+          <h6 class="title is-6">Who can participate?</h6>
+          <p>We are focussing this hackathon for the high school students.
+            So, if you are a bachelor student, you can join the hackathon.</p>
+        </div>
+        <div>
+          <h6 class="title is-6">How big can be a team ?</h6>
+          <p> You need at least two meambers to form a team.
+            You can form teams of up to 5 people. Most teams aim to have a mix of people with both design and developer
+            skills.</p>
+        </div>
+        <div>
+          <h6 class="title is-6">What if I don't have a team or an idea ?</h6>
+          <p>Not to worry, most people don’t! We’ll have team formation and ideation event geared towards helping you
+            find people to work with. You can join our <a
+              href="https://www.facebook.com/groups/frontenderscommnunitynepal/"> Facebook Group</a> to find potential
+            teammates.</p>
+        </div>
+      </div>
+
+      <div class="column is-6">
+        <div>
+          <h6 class="title is-6">Is it a overnight hackathon ?</h6>
+          <p>We believe that along with programming and stuffs, sound sleep is also equally important for hackers. So,
+            participants can return home at the end of the day and come back next day with renewed energy. </p>
+        </div>
+        <div>
+          <h6 class="title is-6">What should I bring ?</h6>
+          <p>You should probably bring laptop and charger.</p>
+        </div>
+
+        <div>
+          <h6 class="title is-6">How can I get involved if I am not participating ? </h6>
+          <p>If you're looking to be a volunteer or mentor (i.e. someone with technical skills who'd be willing to help
+            out participants during the weekend), you should reach out to us in our <a
+              href="https://www.facebook.com/groups/frontenderscommnunitynepal/"> Facebook Group</a> </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <footer class="footer is-dark">
     <div class="content has-text-centered">
@@ -197,3 +248,6 @@
 </body>
 
 </html>
+
+
+<!-- <p>Unhackathon’s goals have always been to organize the most inclusive events we can, and to help other hackathons do the same in innovative ways. After reading hundreds of applications, we’ve decided that this event schedule will accomplish our aims the best. At our Fall event next weekend, we’ll be able to welcome more new hackers - including, for the first time, high school students! Come to our fall event if you're ready to experiment and learn alongside like-minded students. Expert hackers and beginners alike will get to try our interdisciplinary <a href="#springboard-projects">Springboard Projects</a>, a team of great mentors from the NYC tech community will encourage and advise each step of the way, and everyone will start the hackathon season on a positive note. We’ll spend the rest of the fall semester helping other organizing teams, and then be back with the new year for an even bigger overnight event! </p> -->
