--- a/hackfest2019.html
+++ b/hackfest2019.html
@@ -198,7 +198,7 @@
         <div>
           <h6 class="title is-6">Who can participate?</h6>
           <p>We are focussing this hackathon for the high school students.
-            So, if you are a bachelor student, you can join the hackathon.</p>
+            So, if you are a bachelor student, you can join the hackathon.  A team of great mentors will be there to advise and guide you each step of the way to complete your project.</p>
         </div>
         <div>
           <h6 class="title is-6">How big can be a team ?</h6>
@@ -249,5 +249,3 @@
 
 </html>
 
-
-<!-- <p>Unhackathon’s goals have always been to organize the most inclusive events we can, and to help other hackathons do the same in innovative ways. After reading hundreds of applications, we’ve decided that this event schedule will accomplish our aims the best. At our Fall event next weekend, we’ll be able to welcome more new hackers - including, for the first time, high school students! Come to our fall event if you're ready to experiment and learn alongside like-minded students. Expert hackers and beginners alike will get to try our interdisciplinary <a href="#springboard-projects">Springboard Projects</a>, a team of great mentors from the NYC tech community will encourage and advise each step of the way, and everyone will start the hackathon season on a positive note. We’ll spend the rest of the fall semester helping other organizing teams, and then be back with the new year for an even bigger overnight event! </p> -->
