--- a/hackfest2019.html
+++ b/hackfest2019.html
@@ -65,93 +65,93 @@
     </div>
   </section>
 
-  <section class="section container">
 
-    <div class="featured columns is-multiline is-centered mt-80">
+  <div class="featured columns is-multiline is-centered mt-80">
 
-      <div class="column is-one-quarter">
-        <div href="https://blog.yipl.com.np/frontend-meetup-2017-in-kathmandu-bd2a1018971e" target="_blank"
-          class="card box is-paddingless">
+    <div class="column is-one-quarter">
+      <div href="https://blog.yipl.com.np/frontend-meetup-2017-in-kathmandu-bd2a1018971e" target="_blank"
+        class="card box is-paddingless">
 
-          <div class="card-content has-text-centered">
+        <div class="card-content has-text-centered">
 
-            <svg xmlns="http://www.w3.org/2000/svg" width="46" height="47" fill="none">
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M22.741.25c-7.968 0-14.46 6.493-14.46 14.466 0 3.9 2.603 9.068 5.507 14.287 2.905 5.22 6.213 10.345 7.808 13.17a1.317 1.317 0 0 0 2.29 0c1.599-2.826 4.908-7.95 7.813-13.17 2.905-5.22 5.508-10.388 5.508-14.288C37.207 6.742 30.714.249 22.74.249V.25zm0 2.631c6.551 0 11.835 5.284 11.835 11.835 0 2.562-2.328 7.892-5.176 13.008-2.296 4.126-4.863 8.206-6.658 11.2-1.793-2.994-4.36-7.074-6.655-11.2-2.847-5.116-5.175-10.447-5.175-13.008 0-6.55 5.284-11.835 11.83-11.835z"
-                fill="#AD26B4" />
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M22.862 8.506c-3.405 0-6.188 2.784-6.188 6.189 0 3.405 2.783 6.188 6.188 6.188s6.189-2.783 6.189-6.188-2.784-6.189-6.189-6.189zm0 2.105a4.068 4.068 0 0 1 4.084 4.084 4.068 4.068 0 0 1-4.084 4.083 4.068 4.068 0 0 1-4.083-4.083 4.068 4.068 0 0 1 4.083-4.084zM10.365 37.585c-.22 0-.44.072-.62.201L.675 44.39c-.178.13-.314.317-.382.527a1.06 1.06 0 0 0 0 .65 1.06 1.06 0 0 0 1 .727h42.898c.22 0 .44-.072.618-.201.178-.13.314-.317.382-.526.068-.21.069-.44 0-.65a1.06 1.06 0 0 0-.38-.526l-9.067-6.604a1.061 1.061 0 0 0-.62-.202h-5.81c-1.46 0-1.42 2.105 0 2.105h5.467l6.178 4.499H4.527l6.18-4.5h5.462c1.39 0 1.309-2.104 0-2.104h-5.804z"
-                fill="#AD26B4" /></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="46" height="47" fill="none">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M22.741.25c-7.968 0-14.46 6.493-14.46 14.466 0 3.9 2.603 9.068 5.507 14.287 2.905 5.22 6.213 10.345 7.808 13.17a1.317 1.317 0 0 0 2.29 0c1.599-2.826 4.908-7.95 7.813-13.17 2.905-5.22 5.508-10.388 5.508-14.288C37.207 6.742 30.714.249 22.74.249V.25zm0 2.631c6.551 0 11.835 5.284 11.835 11.835 0 2.562-2.328 7.892-5.176 13.008-2.296 4.126-4.863 8.206-6.658 11.2-1.793-2.994-4.36-7.074-6.655-11.2-2.847-5.116-5.175-10.447-5.175-13.008 0-6.55 5.284-11.835 11.83-11.835z"
+              fill="#AD26B4" />
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M22.862 8.506c-3.405 0-6.188 2.784-6.188 6.189 0 3.405 2.783 6.188 6.188 6.188s6.189-2.783 6.189-6.188-2.784-6.189-6.189-6.189zm0 2.105a4.068 4.068 0 0 1 4.084 4.084 4.068 4.068 0 0 1-4.084 4.083 4.068 4.068 0 0 1-4.083-4.083 4.068 4.068 0 0 1 4.083-4.084zM10.365 37.585c-.22 0-.44.072-.62.201L.675 44.39c-.178.13-.314.317-.382.527a1.06 1.06 0 0 0 0 .65 1.06 1.06 0 0 0 1 .727h42.898c.22 0 .44-.072.618-.201.178-.13.314-.317.382-.526.068-.21.069-.44 0-.65a1.06 1.06 0 0 0-.38-.526l-9.067-6.604a1.061 1.061 0 0 0-.62-.202h-5.81c-1.46 0-1.42 2.105 0 2.105h5.467l6.178 4.499H4.527l6.18-4.5h5.462c1.39 0 1.309-2.104 0-2.104h-5.804z"
+              fill="#AD26B4" /></svg>
 
-            <br /> <br />
+          <br /> <br />
 
-            <div class="media">
-              <div class="media-content has-text-centered">
-                <p class="title is-6">To be decided</p>
-              </div>
+          <div class="media">
+            <div class="media-content has-text-centered">
+              <p class="title is-6">To be decided</p>
             </div>
-
           </div>
-        </div>
-      </div>
 
-      <div class="column is-one-quarter">
-        <div href="https://blog.yipl.com.np/frontend-meetup-2017-in-kathmandu-bd2a1018971e" target="_blank"
-          class="card box is-paddingless">
-
-          <div class="card-content has-text-centered">
-
-            <svg xmlns="http://www.w3.org/2000/svg" width="46" height="45" fill="none">
-              <path
-                d="M41.374 7.623V40.72c0 .122-.01.24-.023.362.023-.165.047-.334.066-.499a2.7 2.7 0 0 1-.17.607c.061-.15.127-.301.188-.452a2.606 2.606 0 0 1-.315.528l.297-.382a2.56 2.56 0 0 1-.391.391l.381-.297c-.164.127-.339.231-.527.316.15-.061.301-.127.452-.189-.198.08-.395.137-.607.17.164-.024.334-.047.499-.066-.405.052-.829.024-1.238.024H4.285a3.21 3.21 0 0 1-.367-.024c.164.024.334.047.499.066a2.704 2.704 0 0 1-.608-.17c.151.062.302.128.452.189a2.605 2.605 0 0 1-.527-.316l.381.297a2.558 2.558 0 0 1-.39-.39l.296.38a2.607 2.607 0 0 1-.315-.527c.061.151.127.302.188.452a2.707 2.707 0 0 1-.17-.607c.024.165.048.334.067.499-.047-.377-.024-.767-.024-1.144v-2.382-3.573-4.378-4.83-4.853-4.519-3.803-2.712-1.238c0-.122.01-.24.024-.362-.024.164-.047.334-.066.499.033-.212.09-.41.17-.608-.062.151-.128.302-.19.452.086-.188.19-.362.316-.527l-.296.381c.117-.146.244-.273.39-.39l-.38.296c.164-.127.338-.23.526-.315-.15.061-.3.127-.452.188.198-.08.396-.136.608-.17-.165.024-.335.048-.5.067.406-.052.83-.024 1.239-.024H40.857c.122 0 .244.01.367.024a18.086 18.086 0 0 0-.5-.066c.213.033.41.09.608.17-.15-.062-.301-.128-.452-.19.188.086.362.19.527.316l-.381-.296c.146.117.273.244.39.39l-.296-.38c.127.164.23.338.316.526-.062-.15-.128-.3-.189-.452.08.198.137.396.17.608a18.123 18.123 0 0 1-.066-.5c.014.118.023.227.023.335.005.485.207.984.551 1.332.325.325.862.574 1.332.55 1.008-.046 1.897-.828 1.883-1.882-.014-1.073-.41-2.029-1.097-2.843a3.963 3.963 0 0 0-.983-.81c-.372-.221-.81-.41-1.239-.485a6.387 6.387 0 0 0-1.115-.103H4.299a4.402 4.402 0 0 0-2.99 1.176C.454 5.35.007 6.521.002 7.67v32.825c0 .131-.005.263.005.395a4.376 4.376 0 0 0 1.177 2.8c.65.702 1.553 1.13 2.49 1.253.494.066.98.056 1.483.056H40.86c1.14-.004 2.27-.442 3.07-1.266a4.322 4.322 0 0 0 1.219-3.036v-1.549-3.257V31.4v-5.197-5.385-5.065-4.232V8.64 7.618c0-.984-.867-1.93-1.883-1.883-1.031.052-1.893.833-1.893 1.888z"
-                fill="#3EB0EF" />
-              <path
-                d="M41.374 7.623V15.239l1.883-1.883H3.565c-.537 0-1.074-.009-1.61 0h-.07c.625.627 1.256 1.257 1.882 1.883V8.456c0-.381-.023-.781.024-1.163-.024.165-.047.335-.066.5.033-.212.09-.41.17-.608-.062.15-.128.301-.19.452.086-.188.19-.362.316-.527l-.296.381c.117-.146.244-.273.39-.39l-.38.296c.164-.127.338-.23.526-.315-.15.06-.3.127-.452.188.198-.08.396-.137.608-.17a18.09 18.09 0 0 1-.5.066c.406-.051.83-.023 1.239-.023H40.857c.122 0 .244.01.367.023a18.086 18.086 0 0 0-.5-.066c.213.033.41.09.608.17-.15-.061-.301-.127-.452-.188.188.084.362.188.527.315l-.381-.297c.146.118.273.245.39.391l-.296-.381c.127.165.23.339.316.527-.062-.15-.128-.301-.189-.452.08.198.137.396.17.607a18.123 18.123 0 0 1-.066-.499c.014.113.023.222.023.33.005.485.207.984.551 1.332.325.325.862.574 1.332.55 1.008-.046 1.897-.828 1.883-1.882a4.52 4.52 0 0 0-.499-1.996c-.301-.612-.79-1.078-1.327-1.483-.683-.513-1.572-.758-2.42-.762H4.317C2.78 3.386 1.236 4.2.52 5.599A4.591 4.591 0 0 0 .006 7.74v7.498c0 1.017.861 1.883 1.883 1.883H41.58c.537 0 1.074.005 1.61 0h.071c1.017 0 1.883-.861 1.883-1.883V8.55v-.927c0-.984-.866-1.93-1.883-1.883-1.026.047-1.888.828-1.888 1.883z"
-                fill="#3EB0EF" />
-              <path
-                d="M13.775 8.343V2.675v-.79c0-.984-.866-1.93-1.883-1.883-1.021.047-1.883.828-1.883 1.883v6.458c0 .984.866 1.93 1.883 1.883 1.022-.047 1.883-.828 1.883-1.883zM31.362 1.89v6.457c0 .985.866 1.93 1.883 1.884 1.021-.047 1.883-.829 1.883-1.883V2.68v-.79c0-.984-.867-1.93-1.883-1.884-1.022.043-1.883.824-1.883 1.883z"
-                fill="#3EB0EF" /></svg>
-
-            <br /> <br />
-
-            <div class="media">
-              <div class="media-content has-text-centered">
-                <p class="title is-6">November 09/10, 2019</p>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-
-      <div class="column is-one-quarter">
-        <div href="https://blog.yipl.com.np/frontend-meetup-2017-in-kathmandu-bd2a1018971e" target="_blank"
-          class="card box is-paddingless">
-
-          <div class="card-content has-text-centered">
-
-            <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="none">
-              <path
-                d="M22.502 45A22.5 22.5 0 1 0 0 22.5 22.522 22.522 0 0 0 22.502 45zm0-41.34A18.84 18.84 0 1 1 3.659 22.5 18.86 18.86 0 0 1 22.502 3.66z"
-                fill="#EA4335" />
-              <path
-                d="M27.836 29.19a1.83 1.83 0 0 0 1.233-3.184l-4.742-4.318V7.985a1.83 1.83 0 0 0-3.659 0v15.324l5.936 5.403c.336.308.776.478 1.232.478z"
-                fill="#EA4335" /></svg>
-            <br /> <br />
-
-            <div class="media">
-              <div class="media-content has-text-centered">
-                <p class="title is-6"> 09:00 AM - 05:00 PM</p>
-              </div>
-            </div>
-
-          </div>
         </div>
       </div>
     </div>
 
-    <!-- Feature -->
-    <div class="about columns is-vcentered mt-80" style="margin-bottom: 72px;">
+    <div class="column is-one-quarter">
+      <div href="https://blog.yipl.com.np/frontend-meetup-2017-in-kathmandu-bd2a1018971e" target="_blank"
+        class="card box is-paddingless">
+
+        <div class="card-content has-text-centered">
+
+          <svg xmlns="http://www.w3.org/2000/svg" width="46" height="45" fill="none">
+            <path
+              d="M41.374 7.623V40.72c0 .122-.01.24-.023.362.023-.165.047-.334.066-.499a2.7 2.7 0 0 1-.17.607c.061-.15.127-.301.188-.452a2.606 2.606 0 0 1-.315.528l.297-.382a2.56 2.56 0 0 1-.391.391l.381-.297c-.164.127-.339.231-.527.316.15-.061.301-.127.452-.189-.198.08-.395.137-.607.17.164-.024.334-.047.499-.066-.405.052-.829.024-1.238.024H4.285a3.21 3.21 0 0 1-.367-.024c.164.024.334.047.499.066a2.704 2.704 0 0 1-.608-.17c.151.062.302.128.452.189a2.605 2.605 0 0 1-.527-.316l.381.297a2.558 2.558 0 0 1-.39-.39l.296.38a2.607 2.607 0 0 1-.315-.527c.061.151.127.302.188.452a2.707 2.707 0 0 1-.17-.607c.024.165.048.334.067.499-.047-.377-.024-.767-.024-1.144v-2.382-3.573-4.378-4.83-4.853-4.519-3.803-2.712-1.238c0-.122.01-.24.024-.362-.024.164-.047.334-.066.499.033-.212.09-.41.17-.608-.062.151-.128.302-.19.452.086-.188.19-.362.316-.527l-.296.381c.117-.146.244-.273.39-.39l-.38.296c.164-.127.338-.23.526-.315-.15.061-.3.127-.452.188.198-.08.396-.136.608-.17-.165.024-.335.048-.5.067.406-.052.83-.024 1.239-.024H40.857c.122 0 .244.01.367.024a18.086 18.086 0 0 0-.5-.066c.213.033.41.09.608.17-.15-.062-.301-.128-.452-.19.188.086.362.19.527.316l-.381-.296c.146.117.273.244.39.39l-.296-.38c.127.164.23.338.316.526-.062-.15-.128-.3-.189-.452.08.198.137.396.17.608a18.123 18.123 0 0 1-.066-.5c.014.118.023.227.023.335.005.485.207.984.551 1.332.325.325.862.574 1.332.55 1.008-.046 1.897-.828 1.883-1.882-.014-1.073-.41-2.029-1.097-2.843a3.963 3.963 0 0 0-.983-.81c-.372-.221-.81-.41-1.239-.485a6.387 6.387 0 0 0-1.115-.103H4.299a4.402 4.402 0 0 0-2.99 1.176C.454 5.35.007 6.521.002 7.67v32.825c0 .131-.005.263.005.395a4.376 4.376 0 0 0 1.177 2.8c.65.702 1.553 1.13 2.49 1.253.494.066.98.056 1.483.056H40.86c1.14-.004 2.27-.442 3.07-1.266a4.322 4.322 0 0 0 1.219-3.036v-1.549-3.257V31.4v-5.197-5.385-5.065-4.232V8.64 7.618c0-.984-.867-1.93-1.883-1.883-1.031.052-1.893.833-1.893 1.888z"
+              fill="#3EB0EF" />
+            <path
+              d="M41.374 7.623V15.239l1.883-1.883H3.565c-.537 0-1.074-.009-1.61 0h-.07c.625.627 1.256 1.257 1.882 1.883V8.456c0-.381-.023-.781.024-1.163-.024.165-.047.335-.066.5.033-.212.09-.41.17-.608-.062.15-.128.301-.19.452.086-.188.19-.362.316-.527l-.296.381c.117-.146.244-.273.39-.39l-.38.296c.164-.127.338-.23.526-.315-.15.06-.3.127-.452.188.198-.08.396-.137.608-.17a18.09 18.09 0 0 1-.5.066c.406-.051.83-.023 1.239-.023H40.857c.122 0 .244.01.367.023a18.086 18.086 0 0 0-.5-.066c.213.033.41.09.608.17-.15-.061-.301-.127-.452-.188.188.084.362.188.527.315l-.381-.297c.146.118.273.245.39.391l-.296-.381c.127.165.23.339.316.527-.062-.15-.128-.301-.189-.452.08.198.137.396.17.607a18.123 18.123 0 0 1-.066-.499c.014.113.023.222.023.33.005.485.207.984.551 1.332.325.325.862.574 1.332.55 1.008-.046 1.897-.828 1.883-1.882a4.52 4.52 0 0 0-.499-1.996c-.301-.612-.79-1.078-1.327-1.483-.683-.513-1.572-.758-2.42-.762H4.317C2.78 3.386 1.236 4.2.52 5.599A4.591 4.591 0 0 0 .006 7.74v7.498c0 1.017.861 1.883 1.883 1.883H41.58c.537 0 1.074.005 1.61 0h.071c1.017 0 1.883-.861 1.883-1.883V8.55v-.927c0-.984-.866-1.93-1.883-1.883-1.026.047-1.888.828-1.888 1.883z"
+              fill="#3EB0EF" />
+            <path
+              d="M13.775 8.343V2.675v-.79c0-.984-.866-1.93-1.883-1.883-1.021.047-1.883.828-1.883 1.883v6.458c0 .984.866 1.93 1.883 1.883 1.022-.047 1.883-.828 1.883-1.883zM31.362 1.89v6.457c0 .985.866 1.93 1.883 1.884 1.021-.047 1.883-.829 1.883-1.883V2.68v-.79c0-.984-.867-1.93-1.883-1.884-1.022.043-1.883.824-1.883 1.883z"
+              fill="#3EB0EF" /></svg>
+
+          <br /> <br />
+
+          <div class="media">
+            <div class="media-content has-text-centered">
+              <p class="title is-6">November 09/10, 2019</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="column is-one-quarter">
+      <div href="https://blog.yipl.com.np/frontend-meetup-2017-in-kathmandu-bd2a1018971e" target="_blank"
+        class="card box is-paddingless">
+
+        <div class="card-content has-text-centered">
+
+          <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="none">
+            <path
+              d="M22.502 45A22.5 22.5 0 1 0 0 22.5 22.522 22.522 0 0 0 22.502 45zm0-41.34A18.84 18.84 0 1 1 3.659 22.5 18.86 18.86 0 0 1 22.502 3.66z"
+              fill="#EA4335" />
+            <path
+              d="M27.836 29.19a1.83 1.83 0 0 0 1.233-3.184l-4.742-4.318V7.985a1.83 1.83 0 0 0-3.659 0v15.324l5.936 5.403c.336.308.776.478 1.232.478z"
+              fill="#EA4335" /></svg>
+          <br /> <br />
+
+          <div class="media">
+            <div class="media-content has-text-centered">
+              <p class="title is-6"> 09:00 AM - 05:00 PM</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+
+    <div class="about columns is-vcentered mt-80 has-padding-top-40 has-padding-bottom-30">
       <!-- Content -->
       <div class="column is-5">
         <div class="minimal-feature">
@@ -180,25 +180,88 @@
         </div>
       </div>
     </div>
-    <!-- /Feature -->
+  </div>
 
-    <div class="columns is-vcentered">
-      <!-- Content -->
+  <div class="is-bg-teal">
+    <div class="container">
+      <div class="columns is-vcentered has-padding-top-40">
+        <div class="column  has-text-centered">
+          <div class="minimal-feature">
+            <h1 class="title is-4 minimal-title">Timeline</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="timeline is-centered has-padding-bottom-60">
+        <header class="timeline-header">
+          <span class="tag is-medium is-primary">Start</span>
+        </header>
+        <div class="timeline-item is-primary">
+          <div class="timeline-marker is-primary"></div>
+          <div class="timeline-content">
+            <p class="heading">September 07, 2019</p>
+            <p>Workshop on Flutter Animations</p>
+          </div>
+        </div>
+        <div class="timeline-item is-primary">
+          <div class="timeline-marker is-primary">
+          </div>
+          <div class="timeline-content">
+            <p class="heading">September 28, 2019</p>
+            <p>Session on Design Thinking</p>
+          </div>
+        </div>
+        <div class="timeline-item is-primary">
+            <div class="timeline-marker is-primary">
+            </div>
+            <div class="timeline-content">
+              <p class="heading">October 20, 2019</p>
+              <p>Workshop on React</p>
+            </div>
+          </div>
+        <div class="timeline-item is-danger">
+          <div class="timeline-marker is-danger is-icon">
+            <i class="fa fa-flag"></i>
+          </div>
+          <div class="timeline-content">
+            <p class="heading">November 09, 2019</p>
+            <p>Hack Fest Pre Event</p>
+          </div>
+        </div>
+        <div class="timeline-item is-danger">
+            <div class="timeline-marker is-danger is-icon">
+              <i class="fa fa-flag"></i>
+            </div>
+            <div class="timeline-content">
+              <p class="heading">November 16-17, 2019</p>
+              <p>Hackathon Main Event</p>
+            </div>
+          </div>
+        <header class="timeline-header">
+          <span class="tag is-medium is-primary">End</span>
+        </header>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+
+    <div class="columns is-vcentered has-padding-top-30">
       <div class="column  has-text-centered">
         <div class="minimal-feature">
           <h1 class="title is-4 minimal-title">FAQ</h2>
         </div>
       </div>
-
     </div>
 
-    <div class="faq columns">
+    <div class="faq  columns">
 
       <div class="column is-6">
         <div>
           <h6 class="title is-6">Who can participate?</h6>
           <p>We are focussing this hackathon for the high school students.
-            So, if you are a bachelor student, you can join the hackathon.  A team of great mentors will be there to advise and guide you each step of the way to complete your project.</p>
+            So, if you are a bachelor student, you can join the hackathon. A team of great mentors will be there to
+            advise and guide you each step of the way to complete your project.</p>
         </div>
         <div>
           <h6 class="title is-6">How big can be a team ?</h6>
@@ -234,7 +297,8 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
+
 
   <footer class="footer is-dark">
     <div class="content has-text-centered">
@@ -248,4 +312,3 @@
 </body>
 
 </html>
-
