added organizers and sponsors logos

--- a/hackfest2019.html
+++ b/hackfest2019.html
@@ -182,6 +182,48 @@
     </div>
   </div>
 
+  <div class="container">
+    <div class="columns is-vcentered has-padding-top-40">
+      <div class="column  has-text-centered">
+        <div class="minimal-feature">
+          <h1 class="title is-4 minimal-title">Organizers</h2>
+        </div>
+      </div>
+    </div>
+    <div class="columns">
+      <div class="column is-12 organizers">
+        <a href="https://www.facebook.com/groups/frontenderscommnunitynepal/" target="_blank">
+          <img src="/images/hackfest/fcn.png" alt="Frontenders Community Nepal">
+        </a>
+        <a href="https://www.facebook.com/wlitnepal/" target="_blank">
+          <img src="/images/hackfest/wlit.png" alt="Women Leaders in Technology">
+        </a>
+        <a href="https://www.facebook.com/groups/DevCKathmandu/" target="_blank">
+          <img src="/images/hackfest/devc.png" alt="Facebook Developer Circles kathmandu">
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+      <div class="columns is-vcentered has-padding-top-40">
+        <div class="column  has-text-centered">
+          <div class="minimal-feature">
+            <h1 class="title is-4 minimal-title">Sponsors</h2>
+          </div>
+        </div>
+      </div>
+      <div class="columns has-padding-bottom-60">
+        <div class="column is-12 organizers">
+    
+          <a href="https://www.lftechnology.com/" target="_blank">
+            <img src="/images/hackfest/leapfrog.png" alt="Facebook Developer Circles kathmandu">
+          </a>
+        </div>
+      </div>
+    </div>
+
+
   <div class="is-bg-teal">
     <div class="container">
       <div class="columns is-vcentered has-padding-top-40">
@@ -215,10 +257,18 @@
             <div class="timeline-marker is-primary">
             </div>
             <div class="timeline-content">
-              <p class="heading">October 20, 2019</p>
-              <p>Workshop on React</p>
+              <p class="heading">September October 1, 2019</p>
+              <p>Deadline for registration</p>
             </div>
           </div>
+        <div class="timeline-item is-primary">
+          <div class="timeline-marker is-primary">
+          </div>
+          <div class="timeline-content">
+            <p class="heading">October 19, 2019</p>
+            <p>Workshop on React</p>
+          </div>
+        </div>
         <div class="timeline-item is-danger">
           <div class="timeline-marker is-danger is-icon">
             <i class="fa fa-flag"></i>
@@ -229,20 +279,21 @@
           </div>
         </div>
         <div class="timeline-item is-danger">
-            <div class="timeline-marker is-danger is-icon">
-              <i class="fa fa-flag"></i>
-            </div>
-            <div class="timeline-content">
-              <p class="heading">November 16-17, 2019</p>
-              <p>Hackathon Main Event</p>
-            </div>
+          <div class="timeline-marker is-danger is-icon">
+            <i class="fa fa-flag"></i>
           </div>
+          <div class="timeline-content">
+            <p class="heading">November 16-17, 2019</p>
+            <p>Hackathon Main Event</p>
+          </div>
+        </div>
         <header class="timeline-header">
           <span class="tag is-medium is-primary">End</span>
         </header>
       </div>
     </div>
   </div>
+
 
   <div class="container">
 
