refactored timline, sponsors and footer

--- a/hackfest2019.html
+++ b/hackfest2019.html
@@ -67,7 +67,6 @@
 
 
   <div class="featured columns is-multiline is-centered mt-80">
-
     <div class="column is-one-quarter">
       <div href="https://blog.yipl.com.np/frontend-meetup-2017-in-kathmandu-bd2a1018971e" target="_blank"
         class="card box is-paddingless">
@@ -155,7 +154,7 @@
       <!-- Content -->
       <div class="column is-5">
         <div class="minimal-feature">
-          <h2 class="title is-5 minimal-title">About the hackathon</h2>
+          <h2 class="title is-5 is-spaced">About the hackathon</h2>
           <div class="feature-content">
             <p>
               A hackathon is an event that gathers programmers and tech enthusiasts with different skill sets to “hack”,
@@ -206,22 +205,24 @@
   </div>
 
   <div class="container">
-      <div class="columns is-vcentered has-padding-top-40">
-        <div class="column  has-text-centered">
-          <div class="minimal-feature">
-            <h1 class="title is-4 minimal-title">Sponsors</h2>
-          </div>
-        </div>
-      </div>
-      <div class="columns has-padding-bottom-60">
-        <div class="column is-12 organizers">
-    
-          <a href="https://www.lftechnology.com/" target="_blank">
-            <img src="/images/hackfest/leapfrog.png" alt="Facebook Developer Circles kathmandu">
-          </a>
+    <div class="columns is-vcentered has-padding-top-40">
+      <div class="column  has-text-centered">
+        <div class="minimal-feature">
+          <h1 class="title is-4 minimal-title">Sponsors</h2>
         </div>
       </div>
     </div>
+    <div class="columns has-padding-bottom-60">
+      <div class="column is-12 organizers">
+
+        <a href="https://www.lftechnology.com/" target="_blank">
+          <img src="/images/hackfest/leapfrog.png" alt="Facebook Developer Circles kathmandu">
+        </a>
+
+
+      </div>
+    </div>
+  </div>
 
 
   <div class="is-bg-teal">
@@ -254,13 +255,13 @@
           </div>
         </div>
         <div class="timeline-item is-primary">
-            <div class="timeline-marker is-primary">
-            </div>
-            <div class="timeline-content">
-              <p class="heading">September October 1, 2019</p>
-              <p>Deadline for registration</p>
-            </div>
+          <div class="timeline-marker is-primary">
           </div>
+          <div class="timeline-content">
+            <p class="heading">September October 1, 2019</p>
+            <p>Deadline for registration</p>
+          </div>
+        </div>
         <div class="timeline-item is-primary">
           <div class="timeline-marker is-primary">
           </div>
