added sponsorship block

--- a/hackfest2019.html
+++ b/hackfest2019.html
@@ -67,6 +67,7 @@
 
 
   <div class="featured columns is-multiline is-centered mt-80">
+
     <div class="column is-one-quarter">
       <div href="https://blog.yipl.com.np/frontend-meetup-2017-in-kathmandu-bd2a1018971e" target="_blank"
         class="card box is-paddingless">
@@ -154,7 +155,7 @@
       <!-- Content -->
       <div class="column is-5">
         <div class="minimal-feature">
-          <h2 class="title is-5 is-spaced">About the hackathon</h2>
+          <h2 class="title is-5 minimal-title">About the hackathon</h2>
           <div class="feature-content">
             <p>
               A hackathon is an event that gathers programmers and tech enthusiasts with different skill sets to “hack”,
@@ -218,8 +219,6 @@
         <a href="https://www.lftechnology.com/" target="_blank">
           <img src="/images/hackfest/leapfrog.png" alt="Facebook Developer Circles kathmandu">
         </a>
-
-
       </div>
     </div>
   </div>
@@ -306,7 +305,7 @@
       </div>
     </div>
 
-    <div class="faq  columns">
+    <div class="faq columns">
 
       <div class="column is-6">
         <div>
