--- a/hackfestktm.html
+++ b/hackfestktm.html
@@ -56,17 +56,17 @@
     </div>
   </nav>
 
-  <section class="hero hero-hackathon is-dark is-medium">
+  <section class="hero hero-hackathon is-dark">
     <div class="hero-body">
       <div class="container">
         <h1 class="is-size-6-mobile is-size-3-tablet is-size-1-desktop has-text-centered">
-          Hack Fest 2019
+          Hack Fest Ktm
         </h1>
       </div>
     </div>
   </section>
 
-  <section class="section is-medium featured">
+  <section class="section featured">
     <div class="container">
       <div class="columns is-multiline is-centered mt-80">
 
@@ -151,6 +151,11 @@
         </div>
       </div>
 
+  </section>
+
+  <section class="section is-small">
+    <div class="container">
+
       <div class="about columns is-vcentered mt-80 has-padding-top-40 has-padding-bottom-30">
         <!-- Content -->
         <div class="column is-5">
@@ -182,12 +187,160 @@
         </div>
       </div>
 
+      <div class="partners">
+        <div class="has-padding-6">
+          <h4 class="title is-5 is-spaced has-text-centered">Organizers</h4>
+          <div class="partners-list">
+            <a href="https://www.facebook.com/groups/frontenderscommnunitynepal/" target="_blank">
+              <img src="/images/hackfest/fcn.png" alt="Frontenders Community Nepal">
+            </a>
+            <a href="https://www.facebook.com/wlitnepal/" target="_blank">
+              <img src="/images/hackfest/wlit.png" alt="Women Leaders in Technology">
+            </a>
+          </div>
+        </div>
+        <div class="has-padding-6">
+          <h4 class="title is-5 is-spaced has-text-centered">Supporters</h4>
+          <a href="https://www.facebook.com/groups/DevCKathmandu/" target="_blank">
+            <img src="/images/hackfest/devc.png" alt="Facebook Developer Circles kathmandu">
+          </a>
+        </div>
 
+        <div class="has-padding-6">
+          <h4 class="title is-5 is-spaced has-text-centered">Sponsors</h4>
+          <a href="https://www.lftechnology.com/" target="_blank">
+            <img src="/images/hackfest/leapfrog.png" alt="Facebook Developer Circles kathmandu">
+          </a>
+        </div>
+      </div>
+    </div>
     </div>
   </section>
 
+  <section class="section schedule is-small">
 
-  <script type="text/javascript" src="js/script.js"></script>
+    <div class="container" style="width: 100%;">
+      <div class="timeline is-centered has-padding-bottom-60">
+        <header class="timeline-header">
+          <span class="tag is-medium is-primary">Start</span>
+        </header>
+        <div class="timeline-item is-primary">
+          <div class="timeline-marker is-primary"></div>
+          <div class="timeline-content">
+            <p class="heading">September 07, 2019</p>
+            <p>Workshop on Flutter Animations</p>
+          </div>
+        </div>
+        <div class="timeline-item is-primary">
+          <div class="timeline-marker is-primary">
+          </div>
+          <div class="timeline-content">
+            <p class="heading">September 28, 2019</p>
+            <p>Session on Design Thinking</p>
+          </div>
+        </div>
+        <div class="timeline-item is-primary">
+          <div class="timeline-marker is-primary">
+          </div>
+          <div class="timeline-content">
+            <p class="heading">September October 1, 2019</p>
+            <p>Deadline for registration</p>
+          </div>
+        </div>
+        <div class="timeline-item is-primary">
+          <div class="timeline-marker is-primary">
+          </div>
+          <div class="timeline-content">
+            <p class="heading">October 19, 2019</p>
+            <p>Workshop on React</p>
+          </div>
+        </div>
+        <div class="timeline-item is-danger">
+          <div class="timeline-marker is-danger is-icon">
+            <i class="fa fa-flag"></i>
+          </div>
+          <div class="timeline-content">
+            <p class="heading">November 09, 2019</p>
+            <p>Hack Fest Pre Event</p>
+          </div>
+        </div>
+        <div class="timeline-item is-danger">
+          <div class="timeline-marker is-danger is-icon">
+            <i class="fa fa-flag"></i>
+          </div>
+          <div class="timeline-content">
+            <p class="heading">November 16-17, 2019</p>
+            <p>Hackathon Main Event</p>
+          </div>
+        </div>
+        <header class="timeline-header">
+          <span class="tag is-medium is-primary">End</span>
+        </header>
+      </div>
+    </div>
+  </section>
+
+  <section class="section is-small">
+    <div class="container">
+      <section class="accordions">
+        <article class="accordion is-active">
+          <div class="accordion-header toggle">
+            <p>Hello World</p>
+          </div>
+          <div class="accordion-body">
+            <div class="accordion-content">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus
+              quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam,
+              et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec
+              sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec
+              dui urna, vehicula et sem eget, facilisis sodales sem.
+            </div>
+          </div>
+        </article>
+        <article class="accordion">
+          <div class="accordion-header">
+            <p>Hello World</p>
+            <button class="toggle" aria-label="toggle"></button>
+          </div>
+          <div class="accordion-body">
+            <div class="accordion-content">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus
+              quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam,
+              et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec
+              sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec
+              dui urna, vehicula et sem eget, facilisis sodales sem.
+            </div>
+          </div>
+        </article>
+        <article class="accordion">
+          <div class="accordion-header">
+            <p>Hello World</p>
+            <button class="toggle" aria-label="toggle"></button>
+          </div>
+          <div class="accordion-body">
+            <div class="accordion-content">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus
+              quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam,
+              et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec
+              sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec
+              dui urna, vehicula et sem eget, facilisis sodales sem.
+            </div>
+          </div>
+        </article>
+      </section>
+
+      <footer class="footer has-background-dark has-text-white">
+        <div class="content has-text-centered">
+          <p>
+            Copyright © Frontenders Community Nepal.2019. All Rights Reserved
+          </p>
+        </div>
+      </footer>
+
+
+      <script type="text/javascript" src="js/script.js"></script>
+      <!-- <script type="text/javascript"
+        src="/node_modules/bulma-extensions/bulma-accordion/dist/bulma-accordion.min.js"></script> -->
 </body>
 
 </html>
