--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<link href="css/main.css" rel="stylesheet"></head>
+  <link href="css/main.css" rel="stylesheet">
+</head>
 
 <body>
   <nav class="navbar container is-black is-transparent" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-      <a class="navbar-item" href="/">
+      <a class="navbar-item" href="/" style="padding-left: 0;">
         <svg xmlns="http://www.w3.org/2000/svg" width="206.023" height="44">
           <g fill="#fff">
             <g data-name="Group 27">
@@ -232,7 +233,7 @@
     </div>
   </section>
 
-  <footer class="footer is-dark">
+  <footer class="footer has-background-dark has-text-white">
     <div class="content has-text-centered">
       <p>
         Copyright © Frontenders Community Nepal.2019. All Rights Reserved
@@ -240,6 +241,7 @@
     </div>
   </footer>
 
-<script type="text/javascript" src="js/script.js"></script></body>
+  <script type="text/javascript" src="js/script.js"></script>
+</body>
 
 </html>
