--- a/index.html
+++ b/index.html
@@ -60,8 +60,15 @@
 
         <div class="featured__primary box is-marginless">
           <div class="content">
-            <p>Community of passionate <strong>frontend developers</strong> and <strong>technology enthusiasts</strong>
-            </p>
+
+            <h4 class="title is-3 is-spaced has-text-white">Hack Fest Kathmandu</h4>
+
+            <p>Platform where technology leaders and the brightest minds come together to collaborate on building tools
+              that solve real problems.</p>
+
+
+            <a href="/hackfestktm" class="button is-warning">Learn more</a>
+
 
           </div>
         </div>
