--- a/hackfestktm.html
+++ b/hackfestktm.html
@@ -61,7 +61,7 @@
         <h1 class="is-size-5-mobile is-size-3-tablet is-size-1-desktop">
           Hack Fest Kathmandu
         </h1>
-        <a class="button is-medium has-margin-top-6 has-padding-left-5 has-padding-right-5">Apply Now</a>
+        <!-- <a class="button is-medium has-margin-top-6 has-padding-left-5 has-padding-right-5">Apply Now</a> -->
       </div>
     </div>
   </section>
@@ -117,7 +117,7 @@
 
               <div class="media">
                 <div class="media-content has-text-centered">
-                  <p class="title is-6">November 09/10, 2019</p>
+                  <p class="title is-6">Coming soon</p>
                 </div>
               </div>
 
@@ -142,7 +142,7 @@
 
               <div class="media">
                 <div class="media-content has-text-centered">
-                  <p class="title is-6"> 09:00 AM - 05:00 PM</p>
+                  <p class="title is-6"> TBD</p>
                 </div>
               </div>
 
@@ -235,31 +235,31 @@
           </div>
           <div class="timeline-content">
             <p class="heading">September 28, 2019</p>
-            <p>Session on Design Thinking</p>
+            <p>Workshop on VueJS</p>
           </div>
         </div>
-        <div class="timeline-item is-primary">
+        <!-- <div class="timeline-item is-primary">
           <div class="timeline-marker is-primary">
           </div>
           <div class="timeline-content">
             <p class="heading">September October 1, 2019</p>
             <p>Deadline for registration</p>
           </div>
-        </div>
-        <div class="timeline-item is-primary">
+        </div> -->
+        <!-- <div class="timeline-item is-primary">
           <div class="timeline-marker is-primary">
           </div>
           <div class="timeline-content">
             <p class="heading">October 19, 2019</p>
             <p>Workshop on React</p>
           </div>
-        </div>
+        </div> -->
         <div class="timeline-item is-danger">
           <div class="timeline-marker is-danger is-icon">
             <i class="fa fa-flag"></i>
           </div>
           <div class="timeline-content">
-            <p class="heading">November 09, 2019</p>
+            <p class="heading">TBD</p>
             <p>Hack Fest Pre Event</p>
           </div>
         </div>
@@ -268,7 +268,7 @@
             <i class="fa fa-flag"></i>
           </div>
           <div class="timeline-content">
-            <p class="heading">November 16-17, 2019</p>
+            <p class="heading">TBD</p>
             <p>Hackathon Main Event</p>
           </div>
         </div>
@@ -283,21 +283,9 @@
     <h4 class="title is-5 is-spaced has-text-centered">Challenges</h4>
     <div class="container">
       <div class="columns">
+       
         <div class="column">
           <div class="card">
-            <div class="card-content">
-              <div class="content">
-
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
-              </div>
-            </div>
-            <!-- <footer class="card-footer">
-              <a href="#" class="card-footer-item">More details</a>
-            </footer> -->
-          </div>
-        </div>
-        <div class="column">
-          <div class="card ">
             <div class="card-content">
               <div class="content has-text-left">
                 <h4 class="title is-6 is-spaced">Youth employment</h4>
@@ -310,11 +298,12 @@
             </footer> -->
           </div>
         </div>
+
         <div class="column">
           <div class="card">
             <div class="card-content">
-              <div class="content">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+              <div class="content has-text-left">
+                More challenges will be coming soon.
               </div>
             </div>
             <!-- <footer class="card-footer">
@@ -322,10 +311,11 @@
             </footer> -->
           </div>
         </div>
+       
       </div>
   </section>
 
-  <section class="section is-small">
+  <!-- <section class="section is-small">
     <div class="container">
 
       <h4 class="title is-5 is-spaced has-text-centered">FAQs</h4>
@@ -350,7 +340,7 @@
             <h6 class="title is-6">What if I don't have a team or an idea ?</h6>
             <p>Not to worry, most people don’t! We’ll have team formation and ideation event geared towards helping you
               find people to work with. You can join our <a
-                href="https://www.facebook.com/groups/frontenderscommnunitynepal/"> Facebook Group</a> to find potential
+                href="https://www.facebook.com/groups/hackfestktm/"> Facebook Group</a> to find potential
               teammates.</p>
           </div>
         </div>
@@ -371,13 +361,13 @@
             <p>If you're looking to be a volunteer or mentor (i.e. someone with technical skills who'd be willing to
               help
               out participants during the weekend), you should reach out to us in our <a
-                href="https://www.facebook.com/groups/frontenderscommnunitynepal/"> Facebook Group</a> </p>
+                href="https://www.facebook.com/groups/hackfestktm/"> Facebook Group</a> </p>
           </div>
         </div>
       </div>
     </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="section sponsorship has-background-link has-text-white no-padding-bottom">
     <div class="container">
