--- a/hackfestktm.html
+++ b/hackfestktm.html
@@ -283,8 +283,8 @@
     <h4 class="title is-5 is-spaced has-text-centered">Challenges</h4>
     <div class="container">
       <div class="columns">
-       
-        <div class="column">
+
+        <!-- <div class="column">
           <div class="card">
             <div class="card-content">
               <div class="content has-text-left">
@@ -293,11 +293,11 @@
                 Build anything that creates / facilitates a lot of new jobs and attracts a lot of talented people.
               </div>
             </div>
-            <!-- <footer class="card-footer">
+            <footer class="card-footer">
               <a href="#" class="card-footer-item">More details</a>
-            </footer> -->
+            </footer>
           </div>
-        </div>
+        </div> -->
 
         <div class="column">
           <div class="card">
@@ -311,7 +311,7 @@
             </footer> -->
           </div>
         </div>
-       
+
       </div>
   </section>
 
@@ -383,7 +383,8 @@
               to create cool hacks.
             </div>
             <div class="pt-30">
-              <a href="https://forms.gle/jaUcwhft7f2vstEC8" class="button button-cta btn-outlined is-bold light-btn rounded" target="_blank">Contact Us</a>
+              <a href="https://forms.gle/jaUcwhft7f2vstEC8"
+                class="button button-cta btn-outlined is-bold light-btn rounded" target="_blank">Contact Us</a>
 
             </div>
           </div>
