--- a/hackfestktm.html
+++ b/hackfestktm.html
@@ -66,7 +66,7 @@
     </div>
   </section>
 
-  <section class="section featured">
+  <!-- <section class="section featured">
     <div class="container">
       <div class="columns is-multiline is-centered mt-80">
 
@@ -150,7 +150,7 @@
           </div>
         </div>
       </div>
-  </section>
+  </section> -->
 
   <section class="section is-small">
     <div class="container">
@@ -303,7 +303,7 @@
           <div class="card">
             <div class="card-content">
               <div class="content has-text-left">
-                More challenges will be coming soon.
+                Challenges will be coming soon.
               </div>
             </div>
             <!-- <footer class="card-footer">
