--- a/index.html
+++ b/index.html
@@ -24,33 +24,29 @@
 <link href="css/main.css" rel="stylesheet"></head>
 
 <body>
-  <nav class="navbar container is-black is-transparent" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="/">
-        <svg xmlns="http://www.w3.org/2000/svg" width="206.023" height="44">
-          <g fill="#fff">
-            <g data-name="Group 27">
-              <path data-name="Path 29"
-                d="M3.896 4.174a3.9 3.9 0 0 0-3.9 3.9v11.483a3.9 3.9 0 0 1 3.9-3.9h19.48A11.483 11.483 0 0 0 34.86 4.174H3.896z" />
-              <path data-name="Path 30"
-                d="M0 34.933v3.9h9.637a7.792 7.792 0 0 0 7.792-7.792H3.895A3.9 3.9 0 0 0 0 34.933z" />
-              <path data-name="Path 31"
-                d="M4.029 19.553A4.03 4.03 0 0 0 0 23.583v7.454a3.9 3.9 0 0 1 3.9-3.9h24.607l-7.317-7.588z" />
-            </g><text data-name="FRONTENDERS COMMUNITY NEPAL" transform="translate(47.023 17)" font-size="16"
-              font-family="OpenSans-Bold, Open Sans" font-weight="700">
-              <tspan x="0" y="0">FRONTENDERS</tspan>
-              <tspan x="0" y="22">COMMUNITY NEPAL</tspan>
-            </text>
-          </g>
-        </svg>
-      </a>
-
-      <!-- <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-        data-target="navbarBasicExample">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a> -->
+  <nav class="navbar is-transparent" role="navigation" aria-label="main navigation">
+    <div class="container">
+  
+      <div class="navbar-brand">
+        <a class="navbar-item" href="/">
+          <svg xmlns="http://www.w3.org/2000/svg" width="206.023" height="44">
+            <g fill="#fff">
+              <g data-name="Group 27">
+                <path data-name="Path 29"
+                  d="M3.896 4.174a3.9 3.9 0 0 0-3.9 3.9v11.483a3.9 3.9 0 0 1 3.9-3.9h19.48A11.483 11.483 0 0 0 34.86 4.174H3.896z" />
+                <path data-name="Path 30"
+                  d="M0 34.933v3.9h9.637a7.792 7.792 0 0 0 7.792-7.792H3.895A3.9 3.9 0 0 0 0 34.933z" />
+                <path data-name="Path 31"
+                  d="M4.029 19.553A4.03 4.03 0 0 0 0 23.583v7.454a3.9 3.9 0 0 1 3.9-3.9h24.607l-7.317-7.588z" />
+              </g><text data-name="FRONTENDERS COMMUNITY NEPAL" transform="translate(47.023 17)" font-size="16"
+                font-family="OpenSans-Bold, Open Sans" font-weight="700">
+                <tspan x="0" y="0">FRONTENDERS</tspan>
+                <tspan x="0" y="22">COMMUNITY NEPAL</tspan>
+              </text>
+            </g>
+          </svg>
+        </a>
+      </div>
     </div>
   </nav>
 
