--- a/hackfestktm.html
+++ b/hackfestktm.html
@@ -105,7 +105,7 @@
 
                 <div class="media">
                   <div class="media-content has-text-centered">
-                    <p class="title is-6">Leapfrog Technology</p>
+                    <p class="title is-6" style="line-height: 1.5;">Leapfrog Technology, Charkhal Rd, Kathmandu</p>
                   </div>
                 </div>
 
@@ -357,7 +357,7 @@
             </div>
             <div>
               <h6 class="title is-6">How big can be a team ?</h6>
-              <p> You need at least two meambers to form a team.
+              <p> You need at least 2 meambers to form a team.
                 You can form teams of up to 5 people. Most teams aim to have a mix of people with both design and
                 developer
                 skills.</p>
@@ -469,9 +469,7 @@
                 <a href="https://www.facebook.com/flutterNP/" target="_blank">Flutter Nepal</a>
               </h4>
               <p>
-                WLiT is a technical and professional leadership development organization for young women in Nepal with a
-                vision to
-                empower women to become leaders and innovators.
+              Flutter Nepal is a community of enthusiast Flutter developers with a aim of connecting flutter developers around the country.
               </p>
             </div>
 
@@ -550,7 +548,7 @@
                 <div class="column is-two-thirds-tablet">
 
                   <p>We are conducting our second workshop for the students of NCIT college. We are collaborating with
-                    NCIT to tech students application development with Flutter on the occupation of Software Freedom
+                    NCIT to tech students application development with Flutter on the occasion of Software Freedom
                     Day.
                   </p>
 
