added register button vue workshop

--- a/hackfestktm.html
+++ b/hackfestktm.html
@@ -60,12 +60,13 @@
             <p class="title">
               Hack Fest Kathmandu
             </p>
+            <!-- <a class="button is-medium has-margin-top-6 has-padding-left-5 has-padding-right-5">Apply Now</a> -->
           </div>
         </div>
 
       </div>
 
-      <!-- <a class="button is-medium has-margin-top-6 has-padding-left-5 has-padding-right-5">Apply Now</a> -->
+     
     </div>
     <div class="hero-foot">
       <div class="container">
@@ -586,7 +587,11 @@
                   <p>Vue.js is a JavaScript framework that is being widely used across the world for web development. In
                     this workshop, we are going to do a deep dive into the fundamental concepts in Vue. Participants are
                     guided through interactive exercises as they learn by building a complete Vue app. </p>
-
+                    
+                    <br />
+                    <a class="button is-info"
+                      href="https://docs.google.com/forms/d/e/1FAIpQLScCQOAhkEjbQXUWV057gCi5cgeJ6Gq7d2OuFmPNoW76q-eGTw/viewform"
+                      target="_blank">Register</a>
 
                 </div>
                 <div class="column is-one-third">
