add facebook link

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <p class="title">
               Hack Fest Kathmandu
             </p>
+            <a href="https://www.facebook.com/groups/hackfestktm/" class="button is-link"><i class="fa fa-facebook" style="margin-right: 12px;"></i>Join us on Facebook</a>
             <!-- <a class="button is-medium has-margin-top-6 has-padding-left-5 has-padding-right-5">Apply Now</a> -->
           </div>
         </div>
