--- a/index.html
+++ b/index.html
@@ -155,10 +155,7 @@
               <h2 class="title is-5 minimal-title">About the hackathon</h2>
               <div class="feature-content">
                 <p>
-                  A hackathon is an event that gathers programmers and tech enthusiasts with different skill sets to
-                  “hack”,
-                  or work collaboratively, on a software project. Hack Fest Kathmandu is a platform where student and
-                  developer community come together to build innovative solutions that solve real problems.
+                  A hackathon is a full-day event where students imagine, design, develop, and present a product from scratch (and win cool prizes). The goal is for teams to take an idea from inception to completion and present their accomplishments. Hack Fest Kathmandu is a platform where student community will come together to build innovative solutions that solve real problems.
                 </p>
                 <br>
 
@@ -167,7 +164,6 @@
                   <li>Provide students with mentorship and guidance from professionals</li>
                   <li>Build innovative solutions</li>
                 </ul>
-
               </div>
             </div>
           </div>
@@ -302,7 +298,8 @@
     <section class="section is-small">
       <h4 class="title is-5 is-spaced has-text-centered">Challenges</h4>
       <div class="container">
-        <div class="columns">
+        <div class="columns" style="max-width: 600px; margin: 0 auto;">
+          <p>We will be announcing theme and challenges for hackathon in our pre event on November 23, 2019. We will also have team formation and ideathon programme on the same day. Please stay tuned for more information.
 
           <!-- <div class="column">
                   <div class="card">
@@ -319,29 +316,29 @@
                   </div>
                 </div> -->
 
-          <div class="column">
+          <!-- <div class="column">
             <div class="card">
               <div class="card-content">
                 <div class="content has-text-left">
                   Challenges will be coming soon.
                 </div>
               </div>
-              <!-- <footer class="card-footer">
+              <footer class="card-footer">
                       <a href="#" class="card-footer-item">More details</a>
-                    </footer> -->
+                    </footer>
             </div>
-          </div>
+          </div> -->
 
         </div>
     </section>
 
-
+<!-- 
     <section class="section is-small">
         <h4 class="title is-5 is-spaced has-text-centered">Prizes</h4>
         <div class="container">
           <div class="columns">
   
-            <!-- <div class="column">
+            <div class="column">
                     <div class="card">
                       <div class="card-content">
                         <div class="content has-text-left">
@@ -354,7 +351,7 @@
                         <a href="#" class="card-footer-item">More details</a>
                       </footer>
                     </div>
-                  </div> -->
+                  </div>
   
             <div class="column">
               <div class="card">
@@ -363,14 +360,14 @@
                     Prizes will be coming soon.
                   </div>
                 </div>
-                <!-- <footer class="card-footer">
+                <footer class="card-footer">
                         <a href="#" class="card-footer-item">More details</a>
-                      </footer> -->
+                      </footer>
               </div>
             </div>
   
           </div>
-      </section>
+      </section> -->
 
     <section class="section is-small">
       <div class="container">
@@ -382,8 +379,8 @@
           <div class="column is-6">
             <div>
               <h6 class="title is-6">Who can participate?</h6>
-              <p>We are focusing this hackathon for the high school students.
-                So, if you are a bachelor student or just completed your bachelor degree, you can join the hackathon. A team of great mentors will be there to
+              <p>We are focusing this hackathon for the high school students related to IT.
+                So, if you are a bachelor level student or just completed your bachelor degree, you can join the hackathon. A team of great mentors will be there to
                 advise and guide you each step of the way to complete your project.</p>
             </div>
             <div>
@@ -408,6 +405,16 @@
               <h6 class="title is-6">What should I bring ?</h6>
               <p>You should probably bring laptop and charger.</p>
             </div>
+
+            <div>
+                <h6 class="title is-6">What is the cost of the event ?</h6>
+                <p>The cost of registration is Rs. 300 per participant.</p>
+              </div>
+
+              <div>
+                  <h6 class="title is-6">Do I need programming experience ?</h6>
+                  <p>Hack Fest Kathmandu is a great way to begin your programming experience! A basic understanding is recommended, but we will have mentors to help you make your project idea a reality. </p>
+                </div>  
 
             <div>
               <h6 class="title is-6">How can I get involved if I am not participating ? </h6>
@@ -517,7 +524,6 @@
                 students and
                 developers. These communities are meant to educate and provide a forum for discussion and knowledge
                 sharing.
-
               </p>
             </div>
 
